--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "email-onebox-backend",
   "version": "1.0.0",
+  "main": "src/index.js",
   "scripts": {
     "build": "echo 'No build needed for JS'",
     "start": "node src/index.js",
